--- a/styles/style.css
+++ b/styles/style.css
@@ -1,36 +1,87 @@
+body {
+	background: url('../imgs/fon.png') repeat;
+}
 .main > p, .main > ul, .snoska > cite, .snoska2 > cite {
 	font-size: 1.2em;
 	text-indent: 1.2em;
-	text-align: justify;	
+	text-align: justify;
 }
-
-.snoska {	
-	background-color: #aeaff2;	
+.main {		
+	margin-bottom: 20px;	
+	color: #fff;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;	
+	height: 55vh;
+	align-items: center;
+	min-height: 600px;	
+	background: url('../imgs/upFooter.PNG') no-repeat center;
+	background-size: cover;
+	position: relative;	
 }
-
-.snoska > cite {
-	color: #13147f;
-}
-.snoska2 {	
-	background-color: #6aea56;	
-}
-
-.snoska2 > cite {
-	color: #0b3d03;
-}
-#r_str {
-	color: red;
-}
-#b_str {
-	color: blue;
-}
-
-footer > .podval {
+.gradient_upfooter{
+	position: absolute;
+	left: 0;
+	top: 0;
 	width: 100%;
+	height: 100%;
+	opacity: 0.6;
+	z-index: 0;	
+	background: linear-gradient(160deg, rgba(2,0,36,1) 0%, rgba(21,141,213,1) 35%, rgba(0,212,255,1) 100%);	
+	background: -webkit-linear-gradient(160deg, rgba(2,0,36,1) 0%, rgba(21,141,213,1) 35%, rgba(0,212,255,1) 100%);
+	background: -moz-linear-gradient(160deg, rgba(2,0,36,1) 0%, rgba(21,141,213,1) 35%, rgba(0,212,255,1) 100%);
+	background: -ms-linear-gradient(160deg, rgba(2,0,36,1) 0%, rgba(21,141,213,1) 35%, rgba(0,212,255,1) 100%);
+}
+.select {
+	font-family: 'Times New Roman', Arial, sans-serif;
+	font-size: 20pt;
+	height: 400px;
+	background-color: white;
+	margin: 0 20px 20px 0;
+	text-align: center;
+	border-radius: 20px;
+	-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;	
+	margin-bottom: 50px;
+}
+.select:hover {
+	box-shadow: 0px 0px 20px 5px rgba(204,204,223,0.8);
+	cursor: pointer;
+}
+.select>p {
+	font-size: 14pt;
+}
+
+.sel_plan {
+	color: #fff;
+	font-family: 'Monotype Corsiva', Arial, sans-serif;
+	font-size: 18pt;
+	text-align: center;
+	margin-bottom: 30px;
+}
+.sel_plan > span:before {
+	content: "";
+	display: inline-block;
+	vertical-align: middle;
+	height: 1px;
+	width: 100px;
+	background-color: #fff;
+	margin-right: 20px;
+}
+.sel_plan > span:after {
+	content: "";
+	display: inline-block;
+	vertical-align: middle;
+	height: 1px;
+	width: 100px;
+	background-color: #fff;
+	margin-left: 20px;
+}
+
+footer > .podval {	
 	min-height: 110px;
-	background-color: #dbdbe0;
-	text-align: center;	
-	
+	background-color: #636874;
+	text-align: center;		
 }
 footer > .cp {
 	position: relative;	
@@ -42,48 +93,67 @@ footer > .cp {
 .menu_footer {
 	list-style: none;
 }
-.sidebar {
-	width: 100%;
-	height: 2000px;	
+.podval a {
+	color: #000;
+}
+.podval a:hover {
+	color: #f00;
+	text-decoration: none;
+}
+.podval a:active {
+	color: #d00;
+	text-decoration: none;
 }
 
 /*******Меню******/
 .menu-div {
-	
+	width: 100%;	
+	text-align: center;
 }
-.menu-heder {
+.menu-heder {	
   display: -webkit-flex;
   -webkit-justify-content:center;
   display:flex;  
   justify-content:center;
-  margin-top: 15px;  
+  margin-top: 20px;  
   font-size: 24pt;
   font-family: "Monotype Corsiva", Times, Arial, sans-serif;
 }
 .menu-heder>li {
-  list-style:none;
-  
+  list-style:none;  
 }
 .menu-heder a {
 	text-decoration:none;
-	color: #ffff00;
+	color: black;
 }
 .menu-heder>li:not(:last-child){
   margin-right:1px;
 }
+.menu-heder>li:first-child {
+	border-radius: 20px 0 0 20px;
+	-webkit-border-radius: 20px 0 0 20px;
+	-moz-border-radius: 20px 0 0 20px;
+}
+.menu-heder>li:last-child {
+	border-radius: 0 20px 20px 0;
+	-webkit-border-radius: 0 20px 20px 0;
+	-moz-border-radius: 0 20px 20px 0;
+}
 .menu-heder>li{
-  background:#000077;
-  transition:0.34s;
-  padding:4px 15px;
+	background: rgb(34,193,195);
+	background: linear-gradient(90deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);	
+	background: -webkit-linear-gradient(90deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);	
+	background: -moz-linear-gradient(90deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);	
+	background: -ms-linear-gradient(90deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);	
+	transition: 0.34s;
+	padding: 4px 15px;
 }
-.menu-heder a:hover {
+.menu-heder a:visited, .menu-heder a:active, .menu-heder a:hover {
 	text-decoration:none;
-	color: #ffff00;
-}
-.menu-heder a:visited {
-	text-decoration:none;
-	color: #ffff00;
+	color: black;
 }
 .menu-heder>li:hover{
-  transform:scale(1.4);
+  transform:scale(1.1);
 }
+
+
