--- a/styles/header.css
+++ b/styles/header.css
@@ -37,8 +37,8 @@ body {
 	position: absolute;
 	left: 0;
 	top: 0;
-	width: 100%;
-	height: 100%;
+	width: 1300px;
+	height: 100vh;
 	opacity: 0.7;
 	z-index: 0;	
 	background: linear-gradient(160deg, rgba(2,0,36,1) 0%, rgba(21,141,213,1) 45%, rgba(0,212,255,1) 100%);	
@@ -51,7 +51,7 @@ header {
 	justify-content: flex-end;
 	height: 10vh;
 	align-items: center;	
-	width: 100%;
+	width: 1300px;
 	position: relative;
 	z-index: 1;
 }
