--- a/style.css
+++ b/style.css
@@ -1,70 +1,80 @@
 body {
-	background-color: #333;
+	margin: 0;
+	padding: 0;
+	background-color: #000;
+	overflow: hidden;
 }
-.container {
-	width: 600px;
-	height: 670px;
-	background-color: #ddd;
-}
+.modalDialog {
+    position: fixed;
+    font-family: Arial, Helvetica, sans-serif;
+    top: 10%;    
+    left: 25%;
+    background: rgba(0,0,0,0.8);
+    z-index: 9;
+    -webkit-transition: opacity 400ms ease-in;
+    -moz-transition: opacity 400ms ease-in;
+    transition: opacity 400ms ease-in;
+    display: block;
+    pointer-events: auto;
+} 
 
-.container_header{		
-	display: flex;	
-	padding: 20px;	
-}
-
-.new_game {
-	width: 150px;
-	height: 50px;
-	background-color: #ff0;
-	color: #000;
-	border: 1px solid black;
-	border-radius: 10px;
-	font: 20px sans-serif;
+.innerModalDialog {
+    width: 800px;
+    min-height: 300px;
+	max-height: 100vh;  
 	text-align: center;
-	line-height: 2.5;
-	cursor: pointer;
-}
-.new_game:hover {
-	background-color: #ee0;
-}
-
-.setting {
-	display: flex;	
-	flex-direction: column;	
-	padding: 20px;
-	
-}
-.level, .control {
-	margin-top: 30px;
-	font: 18px sans-serif;
-}
-
-.buttons  {
+    padding: 5px 20px 15px 20px;
+    border-radius: 10px;
+    background: #fff;
+    background: -moz-linear-gradient(#fff, #999);
+    background: -webkit-linear-gradient(#fff, #999);
+    background: -o-linear-gradient(#fff, #999);
+	position: relative;
 	display: flex;
-	width: 150px;	
-	height: 200px;
-	flex-wrap: wrap;
-	margin-top: 50px;
-}
-.btn {
-	margin: 10px;
-	width: 50px;
-	height: 50px;
-	outline: 1px solid black;
-	background-color: #bbb;
-	text-align: center;
-	font: 24px Arial sans-serif;
-	line-height: 1.8;
-	font-weight: 900;
-	cursor: pointer;
-}
-.btn:hover {
-	background-color: #aaa;
+	flex-direction: column;
+	align-items: center;
 }
 
+img {
+	width: 100%;
+}
+
+.controls {	
+	margin: 3px;
+}
+.info {
+	position: absolute;
+	bottom: 8%;
+}
+.ok {  
+	cursor: pointer;   
+	margin-top: 10px;
+	background: #598989;
+	color: #f72505;   
+    width: 100px;
+    text-decoration: none;
+	font-size: 20px;
+    font-weight: bold;
+	-webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    -moz-box-shadow: 1px 1px 3px #000;
+    -webkit-box-shadow: 1px 1px 3px #000;
+    box-shadow: 1px 1px 3px #000;
+}
 
 
+.ok:hover { 
+	background: #8f8b8b;	
+    color: #000;
+}
 
+p {
+	color: #f00;
+}
+.start {
+	color: #a00;
+}
 
 
 
